# waterbowl-esp32-c-hcsr04-level-sensor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  partitions.csv  sdkconfig  sdkconfig.dining  sdkconfig.dining.old  sdkconfig.living  sdkconfig.living.old
.git-crypt/keys/default/0/: 9B82847BB875CE688C242F7E0E7D16D48439430B.gpg
.github/workflows/: mqtt-ota-reload.yml
main/: CMakeLists.txt  Kconfig.projbuild  hcsr04.c  hcsr04.h  main.c  main.h
main/certs/: WaterBowl_DiningRoom-certificate.h  WaterBowl_DiningRoom-private.pem.h  WaterBowl_DiningRoom-public.pem.h  WaterBowl_LivingRoom-certificate.h  WaterBowl_LivingRoom-private.pem.h  WaterBowl_LivingRoom-public.pem.h
main/certs/c/: AmazonRootCA1_pem.c
main/certs/c/dining/: certificate.c  key.c
main/certs/c/living/: certificate.c  key.c  living_room_certificate_pem.c  living_room_private_pem_key.c
main/certs/include/dining/: aws_certificate.h  aws_key.h  certificate.h  key.h
main/certs/include/living/: aws_certificate.h  aws_key.h  certificate.h  key.h
main/certs/iot-topic-policy/: dining-room.json  living-room.json  local-waterbowls.json
main/certs/original/: WaterBowl_DiningRoom-certificate.pem  WaterBowl_DiningRoom-private.pem.key  WaterBowl_DiningRoom-public.pem.key  WaterBowl_LivingRoom-certificate.pem  WaterBowl_LivingRoom-private.pem.key  WaterBowl_LivingRoom-public.pem.key  dining-room-certificate.pem  dining-room-private.pem.key  dining-room-public.pem.key  living-room-certificate.pem  living-room-private.pem.key  living-room-public.pem.key
scripts/: iot-access-policy.json
scripts/certs/: convert_certs_to_c.sh  convert_to_headers.sh  create_certs.sh  rename_cert_files.sh
scripts/ota/: list_s3_files.sh  send_mqtt_ota.sh
scripts/things/: create_things.sh  things.json
